added more bags to products

--- a/index.html
+++ b/index.html
@@ -228,6 +228,177 @@
                 description: "This raffia clutch is a perfect addition to any summer wardrobe. It is handcrafted using high-quality raffia straw, which is known for its durability and lightweight texture. The natural and rustic feel of raffia adds an element of bohemian chic to your outfit.",
                 price: "45",
                 link: "https://www.etsy.com/listing"
+            },
+
+            {
+                id: "modal7",
+                name: "Raffia Bag 7",
+                title: "Beaded Raffia Clutch Purse , Handcrafted Crochet Straw Bag , Wicker Beach Bag , Ideal Gift for Her",
+                category: "raffia",
+                coverImage: "photos/raffia/raffia7.webp",
+                hoverImage: "photos/raffia/rb7-2.webp",
+                images: [
+                    "photos/raffia/raffia7.webp",
+                    "photos/raffia/rb7-2.webp",
+                    "photos/raffia/rb7-3.webp",
+                    "photos/raffia/rb7-4.webp",
+                    "photos/raffia/rb7-5.webp"
+                ],
+                description: "Introducing our stunning Beaded Raffia Clutch Purse, a Handcrafted Crochet Straw Bag that exudes elegance and charm. This Wicker Beach Bag is the perfect accessory for any summer outfit, adding a touch of sophistication to your look. Whether you're strolling down the boardwalk or attending a beachside soirée, this clutch purse is sure to turn heads. The intricate beadwork and high-quality materials make it an ideal gift for her, perfect for any occasion.",
+                price: "45",
+                link: "https://www.etsy.com/listing/1691070939"
+            },
+
+            {
+                id: "modal8",
+                name: "Raffia Bag 8",
+                title: "Crochet Raffia Clutch Bag , Handmade Purse , Colorful Summer Clutch , Knitted Raffia Bag , Straw Pouch Bag, Unique Gift For Her",
+                category: "raffia",
+                coverImage: "photos/raffia/rb8.webp",
+                hoverImage: "photos/raffia/rb8-2.webp",
+                images: [
+                    "photos/raffia/rb8.webp",
+                    "photos/raffia/rb8-2.webp",
+                    "photos/raffia/rb8-3.webp",
+                    "photos/raffia/rb8-4.webp",
+                    "photos/raffia/rb8-5.webp"
+                ],
+                description: "Introducing our modern Handmade Raffia Clutch Bag for women, the perfect companion for your summer adventures! This stylish straw summer pouch bag combines functionality with a trendy design, crafted from durable straw raffia. With its spacious interior, it can accommodate all your essentials while keeping you effortlessly chic. Ideal for beach outings, picnics, or everyday use, this straw raffia bag exudes a boho vibe that will elevate any outfit.",
+                price: "45",
+                link: "https://www.etsy.com/listing/1676907941"
+            },
+
+            {
+                id: "modal9",
+                name: "Raffia Bag 9",
+                title: "Handmade Raffia Pouch Bag, Crochet Party purse, Straw Beach Bag, Bridal Clutch Bag, Gift For Her",
+                category: "raffia",
+                coverImage: "photos/raffia/rb9.webp",
+                hoverImage: "photos/raffia/rb9-2.webp",
+                images: [
+                    "photos/raffia/rb9.webp",
+                    "photos/raffia/rb9-2.webp",
+                    "photos/raffia/rb9-3.webp",
+                    "photos/raffia/rb9-4.webp",
+                    "photos/raffia/rb9-5.webp"
+                ],
+                description: "Introducing our exquisite Handmade Pouch Clutch Bag, a versatile accessory perfect for any occasion. From weddings to extravagant parties, this luxurious bag is designed to make a statement. Crafted with meticulous attention to detail, it showcases a fusion of elegance and boho-chic style. The straw beach bag-inspired exterior adds a touch of summer charm, while the delicate bridal clutch bag details exude timeless sophistication.",
+                price: "45",
+                link: "https://www.etsy.com/listing/1678964333"
+            },
+
+            {
+                id: "modal10",
+                name: "Raffia Bag 10",
+                title: "Crochet Raffia Clutch Bag, Straw Summer Beach Bag, Party Purse, Handmade Evening Bag, Wicker Clutch, Perfect Gift For Her",
+                category: "raffia",
+                coverImage: "photos/raffia/rb10.webp",
+                hoverImage: "photos/raffia/rb10-2.webp",
+                images: [
+                    "photos/raffia/rb10.webp",
+                    "photos/raffia/rb10-2.webp",
+                    "photos/raffia/rb10-3.webp",
+                    "photos/raffia/rb10-4.webp",
+                    "photos/raffia/rb10-5.webp"
+                ],
+                description: "Welcome to our handmade crochet raffia clutch bag, the quintessential accessory for your summer adventures! Whether you're lounging by the beach, dancing at a party, or attending a glamorous evening affair, this versatile bag has you covered in style.",
+                price: "45",
+                link: "https://www.etsy.com/listing/1662732242"
+            },
+
+            {
+                id: "modal11",
+                name: "Raffia Bag 11",
+                title: "Crochet Raffia Clutch Bag, Straw Summer Beach Bag, Party Purse, Handmade Evening Bag, Wicker Clutch, Perfect Gift For Her",
+                category: "raffia",
+                coverImage: "photos/raffia/rb11.webp",
+                hoverImage: "photos/raffia/rb11-2.webp",
+                images: [
+                    "photos/raffia/rb11.webp",
+                    "photos/raffia/rb11-2.webp",
+                    "photos/raffia/rb11-3.webp",
+                    "photos/raffia/rb11-4.webp",
+                    "photos/raffia/rb11-5.webp"
+                ],
+                description: "Elevate your summer style with this natural wicker handmade clutch bag! Crafted with care using straw raffia, this woven pouch is perfect for any occasion. Whether it's a beach day or a night out, this crochet raffia clutch is a chic accessory. Makes a unique handmade gift for her!",
+                price: "45",
+                link: "https://www.etsy.com/listing/1837010941"
+            },
+
+            {
+                id: "modal12",
+                name: "Raffia Bag 12",
+                title: "Crochet Raffia Clutch Bag, Striped Bag, Straw Purse, Party Bag, Evening Clutch, Luxury Gift For Her",
+                category: "raffia",
+                coverImage: "photos/raffia/rb12.webp",
+                hoverImage: "photos/raffia/rb12-2.webp",
+                images: [
+                    "photos/raffia/rb12.webp",
+                    "photos/raffia/rb12-2.webp",
+                    "photos/raffia/rb12-3.webp",
+                    "photos/raffia/rb12-4.webp",
+                    "photos/raffia/rb12-5.webp"
+                ],
+                description: "Discover the perfect blend of elegance and natural charm with our Crochet Raffia Clutch Bag. Handcrafted with care, this exquisite piece features a timeless striped design that adds a touch of sophistication to any ensemble. Whether you're headed to a garden party, a summer soirée, or a romantic evening out, this straw purse is your ideal companion.",
+                price: "45",
+                link: "https://www.etsy.com/listing/1736999208"
+            },
+
+            {
+                id: "modal13",
+                name: "Raffia Bag 13",
+                title: "Crochet Raffia Clutch , Straw Bag for Summer Beach & Evening , Chic Purse , Woven Pouch Bag, Gift For Women",
+                category: "raffia",
+                coverImage: "photos/raffia/rb13.webp",
+                hoverImage: "photos/raffia/rb13-2.webp",
+                images: [
+                    "photos/raffia/rb13.webp",
+                    "photos/raffia/rb13-2.webp",
+                    "photos/raffia/rb13-3.webp",
+                    "photos/raffia/rb13-4.webp",
+                    "photos/raffia/rb13-5.webp"
+                ],
+                description: "Step into effortless elegance with our handcrafted straw bag, featuring a beautifully crocheted raffia design. This versatile clutch is perfect for both sunny beach days and sophisticated evening outings.",
+                price: "45",
+                link: "https://www.etsy.com/listing/1769978241"
+            },
+
+            {
+                id: "modal14",
+                name: "Raffia Bag 14",
+                title: "Handmade Crochet Raffia Clutch Bag, Large Woven Purse for Summer, Handcrafted Beach Bag, Oversized Straw Clutch , Gift For Her",
+                category: "raffia",
+                coverImage: "photos/raffia/rb14.webp",
+                hoverImage: "photos/raffia/rb14-2.webp",
+                images: [
+                    "photos/raffia/rb14.webp",
+                    "photos/raffia/rb14-2.webp",
+                    "photos/raffia/rb14-3.webp",
+                    "photos/raffia/rb14-4.webp",
+                    "photos/raffia/rb14-5.webp"
+                ],
+                description: "Celebrate warm days with this handmade crochet raffia clutch bag – a large, natural fiber purse that brings effortless beach-chic to every look. Its boho-inspired design, handcrafted with care, offers a lightweight yet roomy solution for summer outings, vacations, and everyday elegance.",
+                price: "45",
+                link: "https://www.etsy.com/listing/4301743780"
+            },
+
+            {
+                id: "modal15",
+                name: "Raffia Bag 15",
+                title: "Crochet Raffia Clutch Bag , Handmade Straw Pouch , Leopard Printed Boho Purse , Trendy Gift For Women",
+                category: "raffia",
+                coverImage: "photos/raffia/rb15.jpg",
+                hoverImage: "photos/raffia/rb15-2.jpg",
+                images: [
+                    "photos/raffia/rb15.jpg",
+                    "photos/raffia/rb15-2.jpg",
+                    "photos/raffia/rb15-3.jpg",
+                    "photos/raffia/rb15-4.jpg",
+                    "photos/raffia/rb15-5.avif"
+                ],
+                description: "Introducing our Handmade Raffia Clutch Bag, a beautiful Crochet Bag perfect for adding a pop of color to your summer wardrobe. This Colorful Summer Clutch is hand-knitted with high-quality raffia material, making it lightweight and perfect for a day out. The straw pouch design adds a touch of chic to your outfit, while the leopard printed accents bring a trendy and stylish element to this versatile bag. Stand out in style with this Knitted Raffia Bag, a must-have accessory for any fashionista looking to make a statement.",
+                price: "45",
+                link: "https://www.etsy.com/listing/1695415127"
             }
         ]
 
