Adding even more bags

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
         <button onclick="filterBags('all')">All</button>
         <button onclick="filterBags('raffia')">Raffia Bags</button>
         <button onclick="filterBags('metallic')">Metallic Bags</button>
+        <button onclick="filterBags('macrame')">Macrame Bags</button>
+        <button onclick="filterBags('waxed')">Waxed Yarn Bags</button>
+        <button onclick="filterBags('winter')">Winter Bags</button>
+        <button onclick="filterBags('granny')">Granny Square Bags</button>
+        <button onclick="filterBags('craft')">Craft and Supplies</button>
     </div>
 
     <div class="bag-gallery" id="bagGallery"></div>
@@ -399,6 +404,197 @@
                 description: "Introducing our Handmade Raffia Clutch Bag, a beautiful Crochet Bag perfect for adding a pop of color to your summer wardrobe. This Colorful Summer Clutch is hand-knitted with high-quality raffia material, making it lightweight and perfect for a day out. The straw pouch design adds a touch of chic to your outfit, while the leopard printed accents bring a trendy and stylish element to this versatile bag. Stand out in style with this Knitted Raffia Bag, a must-have accessory for any fashionista looking to make a statement.",
                 price: "45",
                 link: "https://www.etsy.com/listing/1695415127"
+            },
+
+            {
+                id: "modal16",
+                name: "Raffia Bag 16",
+                title: "Crochet Straw Summer Clutch , Natural Wicker Pouch Bag , Stylish Raffia Bag , Gift for Women",
+                category: "raffia",
+                coverImage: "photos/raffia/rb16.jpg",
+                hoverImage: "photos/raffia/rb16-2.jpg",
+                images: [
+                    "photos/raffia/rb16.jpg",
+                    "photos/raffia/rb16-2.jpg",
+                    "photos/raffia/rb16-3.jpg",
+                    "photos/raffia/rb16-4.jpg",
+                    "photos/raffia/rb16-5.jpg"
+                ],
+                description: "This raffia clutch is a perfect addition to any summer wardrobe. It is handcrafted using high-quality raffia straw, which is known for its durability and lightweight texture. The natural and rustic feel of raffia adds an element of bohemian chic to your outfit.",
+                price: "45",
+                link: "https://www.etsy.com/listing/1676910955"
+            },
+
+            {
+                id: "modal17",
+                name: "Raffia Bag 17",
+                title: "Handmade Crochet Raffia Clutch Bag , Stylish Womens Straw Summer Pouch , Wicker Beach Clutch Bag , Gift for Women",
+                category: "raffia",
+                coverImage: "photos/raffia/rb17.avif",
+                hoverImage: "photos/raffia/rb17-2.jpg",
+                images: [
+                    "photos/raffia/rb17.avif",
+                    "photos/raffia/rb17-2.jpg",
+                    "photos/raffia/rb17-3.jpg",
+                    "photos/raffia/rb17-4.jpg",
+                    "photos/raffia/rb17-5.jpg"
+                ],
+                description: "Introducing our handmade Crochet Raffia Clutch Bag, the perfect accessory for the summer season. Made with love and care, this womens straw summer pouch bag features a unique wicker beach design, adding a touch of elegance to any outfit. Whether it's a beach day or a wedding party, this straw dumpling clutch is both functional and stylish. Surprise someone special with this handcrafted gift that exudes natural charm.",
+                price: "45",
+                link: "https://www.etsy.com/listing/1662339708"
+            },
+
+            {
+                id: "modal18",
+                name: "Raffia Bag 18",
+                title: "Handmade Crochet Raffia Clutch Bag - Boho Summer Purse, Natural Woven Evening Bag, Lightweight Gift for Her, Beach Wedding Accessory",
+                category: "raffia",
+                coverImage: "photos/raffia/rb18.webp",
+                hoverImage: "photos/raffia/rb18-2.webp",
+                images: [
+                    "photos/raffia/rb18.webp",
+                    "photos/raffia/rb18-2.webp",
+                    "photos/raffia/rb18-3.webp",
+                    "photos/raffia/rb18-4.webp",
+                    "photos/raffia/rb18-5.webp"
+                ],
+                description: "Elevate your summer style with this handmade crochet bag, perfect for beach days, casual outings, or as a travel essential. Crafted with care, its large size ensures ample space for all your essentials. Made from eco-friendly materials, this bag is not only sustainable but also a fashion-forward choice. Its neutral tones make it versatile, fitting effortlessly with any outfit. Whether you're heading to the beach or on a weekend getaway, this stylish purse is the perfect companion.",
+                price: "45",
+                link: "https://www.etsy.com/listing/1777013343"
+            },
+
+            {
+                id: "modal19",
+                name: "Raffia Bag 19",
+                title: "Handmade Raffia Crochet Clutch Purse, Straw Bag with Crowbar Pattern, Knitted Pouch Bag, Trendy Gift For Women",
+                category: "raffia",
+                coverImage: "photos/raffia/rb19.webp",
+                hoverImage: "photos/raffia/rb19-2.webp",
+                images: [
+                    "photos/raffia/rb19.webp",
+                    "photos/raffia/rb19-2.webp",
+                    "photos/raffia/rb19-3.webp",
+                    "photos/raffia/rb19-4.webp",
+                    "photos/raffia/rb19-5.webp"
+                ],
+                description: "Introducing our beautiful handmade knitted purse, the perfect accessory for any occasion! This raffia crochet clutch features a unique crowbar pattern straw pouch bag design that adds a touch of bohemian chic to your outfit. Lovingly crafted with high-quality materials, this purse is both stylish and practical. Whether you're heading to a summer festival or a night out on the town, this versatile clutch is sure to turn heads and elevate your look. Add a touch of artisanal charm to your wardrobe with this stunning knitted purse!",
+                price: "45",
+                link: "https://www.etsy.com/listing/1696632391"
+            },
+
+            {
+                id: "modal20",
+                name: "Raffia Bag 20",
+                title: "Handmade Raffia Clutch Bag with Rhinestone Brooch– Boho Luxe Evening Purse, Straw Wedding Clutch, Elegant Gift for Her, Summer Accessory",
+                category: "raffia",
+                coverImage: "photos/raffia/rb20.webp",
+                hoverImage: "photos/raffia/rb20-2.webp",
+                images: [
+                    "photos/raffia/rb20.webp",
+                    "photos/raffia/rb20-2.webp",
+                    "photos/raffia/rb20-3.webp",
+                    "photos/raffia/rb20-4.webp",
+                    "photos/raffia/rb20-5.webp"
+                ],
+                description: "Elevate your style with our Handmade Crochet Raffia Bag, designed for the modern boho chic enthusiast. Crafted with love, this bag combines sustainability with fashion, making it the perfect accessory for any season.",
+                price: "45",
+                link: "https://www.etsy.com/listing/1782611501"
+            },
+
+            {
+                id: "modal21",
+                name: "Raffia Bag 21",
+                title: "Baby Blue Raffia Crochet Clutch Bag, Handmade Summer Purse, Lightweight Woven Handbag, Beach Wedding Accessory, Gift For Her",
+                category: "raffia",
+                coverImage: "photos/raffia/rb21.webp",
+                hoverImage: "photos/raffia/rb21-2.webp",
+                images: [
+                    "photos/raffia/rb21.webp",
+                    "photos/raffia/rb21-2.webp",
+                    "photos/raffia/rb21-3.webp",
+                    "photos/raffia/rb21-4.webp",
+                    "photos/raffia/rb21-5.webp"
+                ],
+                description: "This baby blue raffia crochet clutch bag is a handmade treasure designed for effortless elegance. Crafted from eco-friendly raffia yarn, its lightweight structure and soft pastel hue make it a stylish yet practical choice for warm-weather outings.",
+                price: "45",
+                link: "https://www.etsy.com/listing/1891398056"
+            },
+
+                {
+                id: "modal22",
+                name: "Raffia Bag 22",
+                title: "Straw Summer Pouch Bag, Modern Natural Wicker Handmade Clutch Bag For Women, Straw Raffia Bag, Raffia Crochet Woven Bag",
+                category: "raffia",
+                coverImage: "photos/raffia/rb22.webp",
+                hoverImage: "photos/raffia/rb22-2.webp",
+                images: [
+                    "photos/raffia/rb22.webp",
+                    "photos/raffia/rb22-2.webp",
+                    "photos/raffia/rb22-3.webp",
+                    "photos/raffia/rb22-4.webp",
+                    "photos/raffia/rb22-5.webp"
+                ],
+                description: "Elevate your summer style with our Straw Summer Pouch Bag, a beautifully handcrafted raffia woven clutch that blends effortless elegance with natural charm. Perfect for beach days, brunch outings, or evening strolls, this modern wicker bag adds a touch of boho-chic to any outfit.",
+                price: "45",
+                link: "https://www.etsy.com/listing/1797514130"
+            },
+
+            {
+                id: "modal23",
+                name: "Raffia Bag 23",
+                title: "Raffia Beaded Clutch Bag For Women, Red Evening Clutch Bag ,Red Wedding Guest Bag,,Wedding Purse, Bridal Party Clutch Bag,Woven Handbag",
+                category: "raffia",
+                coverImage: "photos/raffia/rb23.webp",
+                hoverImage: "photos/raffia/rb23-2.webp",
+                images: [
+                    "photos/raffia/rb23.webp",
+                    "photos/raffia/rb23-2.webp",
+                    "photos/raffia/rb23-3.webp",
+                    "photos/raffia/rb23-4.webp",
+                    "photos/raffia/rb23-5.webp"
+                ],
+                description: "Add elegance to any outfit with this stunning raffia beaded clutch bag in vibrant red. Perfect for weddings, evening parties, or any formal event, this handmade woven handbag exudes sophistication and charm. Its lightweight design and intricate beading make it a standout accessory, while the spacious interior provides enough room for essentials like your phone, keys, and makeup.",
+                price: "45",
+                link: "https://www.etsy.com/listing/1820574088"
+            },
+
+            {
+                id: "modal24",
+                name: "Raffia Bag 24",
+                title: "Handmade Woven Clutch Bag, Boho Raffia Purse, Vintage Style Handbag, Crochet Evening Bag, Summer Beach Clutch, Gift For Her",
+                category: "raffia",
+                coverImage: "photos/raffia/rb24.webp",
+                hoverImage: "photos/raffia/rb24-2.webp",
+                images: [
+                    "photos/raffia/rb24.webp",
+                    "photos/raffia/rb24-2.webp",
+                    "photos/raffia/rb24-3.webp",
+                    "photos/raffia/rb24-4.webp",
+                    "photos/raffia/rb24-5.webp"
+                ],
+                description: "Elevate your style with this handmade woven clutch bag, designed for those who love timeless fashion with a touch of bohemian charm. Crafted from high-quality raffia, this boho-inspired purse is lightweight, durable, and perfect for any occasion. Whether you're heading to a summer beach party, an evening event, or simply looking for a unique everyday handbag, this clutch is a stylish must-have.",
+                price: "45",
+                link: "https://www.etsy.com/listing/1679533971"
+            },
+
+            {
+                id: "modal25",
+                name: "Metallic Bag 1",
+                title: "Metallic Silver Crochet Clutch Bag , Luxury Wedding Handbag , Evening Pouch for Women , Bridesmaid Gift",
+                category: "metallic",
+                coverImage: "photos/metallic/mb1.avif",
+                hoverImage: "photos/metallic/mb1-2.webp",
+                images: [
+                    "photos/metallic/mb1.avif",
+                    "photos/metallic/mb1-2.webp",
+                    "photos/metallic/mb1-3.webp",
+                    "photos/metallic/mb1-4.webp",
+                    "photos/metallic/mb1-5.webp"
+                ],
+                description: "Add a touch of elegance to your evening ensemble with this stunning Metallic Silver Clutch Bag For Women. Hand-crocheted with intricate details, this Evening Crochet Pouch Bag exudes sophistication and style. Perfect for summer events or luxury weddings, this handbag is sure to turn heads and elevate your look. Keep your essentials close at hand in this chic and versatile accessory. Handcrafted with care, this clutch bag is a must-have for any fashion-forward individual.",
+                price: "45",
+                link: "https://www.etsy.com/listing/1681339107"
+
             }
         ]
 
