Fixed the css parts for tablets and laptops, made the filter button look better, made the close button visible

--- a/index.html
+++ b/index.html
@@ -819,6 +819,66 @@
                 description: "Introducing our stunning silver sequin crochet bag! This macrame purse is perfect for any occasion, whether you're heading to a party or a casual night out. Designed especially for women, it's the ultimate accessory to add some sparkle and glamour to your ensemble. With its intricate stitching and shimmering sequins, this bag is both stylish and eye-catching. It also makes for a thoughtful gift for her, whether it's for a birthday, anniversary, or just to show your appreciation. Grab yours today and make a style statement!",
                 price: "45",
                 link: "https://www.etsy.com/listing/1663409788"
+            },
+
+            {
+                id: "modal36",
+                active: true,
+                name: "Macrame Bag 1",
+                title: "Handmade Crochet Macrame Clutch Bag - Colorful Summer Pouch Bag, Knitted Purse,Perfect Gift for Her",
+                category: "macrame",
+                coverImage: "photos/macrame/mab1.webp",
+                hoverImage: "photos/macrame/mab1-2.webp",
+                images: [
+                    "photos/macrame/mab1.webp",
+                    "photos/macrame/mab1-2.webp",
+                    "photos/macrame/mab1-3.webp",
+                    "photos/macrame/mab1-4.webp",
+                    "photos/macrame/mab1-5.webp"
+                ],
+                description: "Introducing our Handmade Crochet Macrame Clutch Bag, the perfect Colorful Summer Pouch Bag for any warm-weather outing! This Knitted Purse is not only stylish but also practical, with enough space to hold all your essentials. It makes a unique Gift for Her that she will cherish for years to come. Handcrafted with love and attention to detail, this one-of-a-kind clutch bag is sure to elevate any outfit and add a touch of boho flair to your look.",
+                price: "45",
+                link: "https://www.etsy.com/listing/1683105827"
+            },
+
+            {
+                id: "modal37",
+                active: true,
+                name: "Macrame Bag 2",
+                title: "Handmade Crochet Clutch Bag, Knitted Pouch Bag, Colorful Summer Purse, Unique Gift For Her",
+                category: "macrame",
+                coverImage: "photos/macrame/mab2.webp",
+                hoverImage: "photos/macrame/mab2-2.webp",
+                images: [
+                    "photos/macrame/mab2.webp",
+                    "photos/macrame/mab2-2.webp",
+                    "photos/macrame/mab2-3.webp",
+                    "photos/macrame/mab2-4.webp",
+                    "photos/macrame/mab2-5.webp"
+                ],
+                description: "Add a pop of color and style to your summer wardrobe with this handmade crochet clutch bag! This colorful summer clutch is perfect for carrying your essentials in a unique and fashionable way. Made with love and attention to detail, this knitted pouch bag is a one-of-a-kind piece that also makes a great gift for her. Upgrade your accessory game with this versatile and eye-catching creation!",
+                price: "45",
+                link: "https://www.etsy.com/listing/1678305112"
+            },
+
+            {
+                id: "modal38",
+                active: true,
+                name: "Macrame Bag 3",
+                title: "Handmade Crochet Summer Clutch Bag, Colorful Beach Clutch, Woven Macrame Purse, Gift For Her",
+                category: "macrame",
+                coverImage: "photos/macrame/mab3.webp",
+                hoverImage: "photos/macrame/mab3-2.webp",
+                images: [
+                    "photos/macrame/mab3.webp",
+                    "photos/macrame/mab3-2.webp",
+                    "photos/macrame/mab3-3.webp",
+                    "photos/macrame/mab3-4.webp",
+                    "photos/macrame/mab3-5.webp"
+                ],
+                description: "This macrame clutch is a perfect addition to any summer wardrobe. It is handcrafted using high-quality macrame yarn, which is known for its durability . The natural and rustic feel of yarn adds an element of bohemian chic to your outfit.",
+                price: "45",
+                link: "https://www.etsy.com/listing/1706591030"
             }
         ]
 
