--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Handmade bags collection - crochet, raffia, metallic bags, and more. Discover unique, handcrafted designs.">
+
     <title>LoopHandmadeBagTr</title>
     <link rel="stylesheet" href="styles.css">
 </head>
