--- a/index.html
+++ b/index.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Handmade bags collection - crochet, raffia, metallic bags, and more. Discover unique, handcrafted designs.">
+    <meta name="keywords" content="handmade bags, crochet bags, raffia clutch, Loop Handmade Bags, Etsy bags">
+    <meta name="author" content="Loop Handmade Bag TR">
+
+    <link rel="icon" href="photos/favicon.ico" type="image/x-icon">
+    <link rel="icon" type="image/png" sizes="32x32" href="photos/favicon-32x32.png">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="photos/apple-touch-icon.png">
+    <link rel="manifest" href="photos/site.webmanifest">
+
 
     <title>LoopHandmadeBagTr</title>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -24,7 +35,9 @@
         <button onclick="filterBags('winter')">Winter Bags</button>
         <button onclick="filterBags('granny')">Granny Square Bags</button>
         <button onclick="filterBags('craft')">Craft and Supplies</button>
+        <input id="myInput" type="text" placeholder="Search..">
     </div>
+
 
     <div class="bag-gallery" id="bagGallery"></div>
     <div id="modalsContainer"></div>
