Learned that to be able to make a cms admin panel I neeeded to work with pure data, changed js file into json(actually const was a giveaway Idk what was happening in my brain at that time -_-)

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <button onclick="filterBags('winter')">Winter Bags</button>
         <button onclick="filterBags('granny')">Granny Square Bags</button>
         <button onclick="filterBags('craft')">Craft and Supplies</button>
-        <input id="myInput" type="text" placeholder="Search..">
+        <input id="myInput" type="text" placeholder="Search...">
     </div>
 
 
@@ -70,7 +70,7 @@
         </div>
     </div>
 
-    <script src="products.js"></script>
+    <script src="products.json"></script>
     <script src="main.js"></script>
 </body>
 </html>
