Fixed some issues about the images opening slow

--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Handmade bags collection - crochet, raffia, metallic bags, and more. Discover unique, handcrafted designs.">
     <meta name="keywords" content="handmade bags, crochet bags, raffia clutch, Loop Handmade Bags, Etsy bags">
-    <meta name="author" content="Loop Handmade Bag TR">
+    <meta name="author" content="Kaan Okumuş">
 
     <link rel="icon" href="photos/favicon.ico" type="image/x-icon">
     <link rel="icon" type="image/png" sizes="32x32" href="photos/favicon-32x32.png">
